Fixed header spacing

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -23,6 +23,15 @@ body
     margin: 0
     padding: 0
 
+h1, h2, h3, h4, h6
+    margin-top: 80px
+    @media (max-width: 768px)
+        margin-top: 60px
+h5
+    margin-top: 20px
+    @media (max-width: 768px)
+        margin-top: 10px
+
 h1, h2, h3, h4
     font-family: $fontSans
     color: $beta
